AC_INIT([sap], [0.1], [linus.luessing@c0d3.blue], [sap], [https://github.com/T-X/libsap])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/libsap.c])
AC_CONFIG_HEADERS([src/sap.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
AM_PROG_AR
LT_INIT
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_OUTPUT
